--- a/ClientKarakatsiyaHelper/package.json
+++ b/ClientKarakatsiyaHelper/package.json
@@ -19,6 +19,8 @@
     "@angular/router": "^19.2.0",
     "@cloudinary/angular-5.x": "^1.5.4",
     "@cloudinary/url-gen": "^1.22.0",
+    "@ngx-translate/core": "^17.0.0",
+    "@ngx-translate/http-loader": "^17.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
